提交OOM测试用例